--- a/templates/visuals.html
+++ b/templates/visuals.html
@@ -17,4 +17,10 @@
             <li><a href="{{ url_for('Dyson') }}">The Dyson game</a>  Add image</li>
             <li><a href="{{ url_for('Coulomb') }}">The Coulomb game</a>  Add image</li>
         </body>
+
+        <p> This page hosts simulations related to my <a href="https://www.math.ucla.edu/~azp/ResearchAP.html">research</a>.  It is in development and may or may not work. </p>
+        <br>
+        <p> All code is open source and can be found at <a href="https://github.com/AaronZPalmer/MathVisuals/"> https://github.com/AaronZPalmer/MathVisuals/ </a>. </p>
+        <br>
+        <p><a href="https://www.math.ucla.edu/~azp/index.html"> Aaron's home page at UCLA </p>
 </html>
